<resources>
    <string name="app_name">GreenSpot</string>
    <string name="default_language" translatable="false">du</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="res_txtsingup">Don\'t have an account? <b>Create account</b></string>
    <string name="res_txtlogin">Have account? <b>Login</b></string>
    <string name="res_name">Name</string>
    <string name="res_email">Email</string>
    <string name="res_password">Password</string>
    <string name="res_forgot_password">Forgot Password?</string>
    <string name="res_back_to_login">Back to <b>Login</b></string>
    <string name="enter_the_password">Please enter password</string>
    <string name="enter_the_number">Please enter mobile number</string>
    <string name="res_validemail">Please enter valid email</string>
    <string name="res_validnumber">Please enter valid number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="res_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="res_vacatiion">Vacation</string>
    <string name="res_tour">Tour</string>
    <string name="res_event">Event</string>
    <string name="res_hotel">Hotel</string>
    <string name="title_activity_list_place">ListPlaceActivity</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="res_sortdesc">Op het eiland Anaula bevindt u zich in het hart van het Boven Surinamegebied, in de Suriname-rivier, op een steenworp afstand van de Ferulasi stroomve</string>
    <string name="res_followers">Followers</string>
    <string name="res_tours">Tours</string>
    <string name="res_satisfaction">Satisfaction</string>
    <string name="res_feedback">Feedback</string>
    <string name="title_activity_visiter_place">VisiterPlaceActivity</string>
    <string name="res_hey_welcome_back">Hey, Welcome Back</string>
    <string name="res_hey_welcome">Hey, Welcome</string>
    <string name="res_txtforgot_password">Forgot Password</string>
    <string name="res_login">Login</string>
    <string name="res_loginsingup">Login / Sign Up</string>
    <string name="res_create_an_acco_unt">Create account</string>
    <string name="res_bookings">Booking</string>
    <string name="res_account">Account</string>
    <string name="str_selectcontry">Select Country</string>
    <string name="res_search">Search</string>
    <string name="res_cancel">Cancel</string>
    <string name="res_apply">Apply</string>
    <string name="res_search_title">Search here...</string>
    <string name="res_select_sort">Sort By</string>
    <string name="title_activity_tour_list">TourListActivity</string>
    <string name="res_book_now">Book Now</string>
    <string name="res_book_now_na">Booking N/A</string>
    <string name="title_activity_tour_details">TourDetailsActivity</string>
    <string name="res_reivewvalidation">Please enter description</string>
    <string name="res_selectrating">Please select rating</string>
    <string name="msg_raingsucess">Rating submitted successfully</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_place_booking">PlaceBookingActivity</string>
    <string-array name="pass_arrays">
        <item>Day pass</item>
        <item>Night Pass</item>

    </string-array>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="res_old_password">Current password</string>
    <string name="res_new_password">New Password</string>
    <string name="res_confirm_password">Confirm password</string>
    <string name="message_denied">Permission \"%1$s\" has been denied.</string>
    <string name="please_wait">Please Wait...</string>
    <string name="msg_unexpected_error">Invalid response from the upstream server.</string>
    <string name="msg_internet_conn">Check Internet Connection.</string>
    <string name="res_first_name">First Name</string>
    <string name="res_last_name">Last Name</string>
    <string name="res_phone_no">Mobile No</string>
    <string name="res_enterphonno">Please enter mobile number</string>
    <string name="title_activity_tour_booking">TourBookingActivity</string>
    <string name="title_activity_event_booking">EventBookingActivity</string>
    <string name="title_activity_booking_details">BookingDetailsActivity</string>
    <string name="str_choosecurrency">Select your currency</string>
    <string name="str_language">Select your language</string>
    <string name="res_price_range">Price Range</string>
    <string name="res_clear">Clear</string>
    <string name="str_reviews">Reviews</string>
    <string name="res_continue_as_guest">Continue As Guest</string>
    <string name="str_everyday">Every Day</string>
    <string name="str_startingform">Starting From</string>
    <string name="str_pricenotavaible">Price Not Available</string>
    <string name="res_firstname">First Name</string>
    <string name="res_gender">Gender</string>
    <string name="res_date_of_birth">Date Of Birth</string>
    <string name="res_contact_number">Contact Number</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_paymnet_j">PaymnetJActivity</string>
    <string name="res_select_your_bank">Select your bank</string>
    <string name="res_pay_now">Pay Now</string>
    <string name="title_activity_place_tab">PlaceTabActivity</string>
    <string name="title_activity_tour_tab">TourTabActivity</string>
    <string name="tab_description">DESCRIPTION</string>
    <string name="tab_availability">AVAILABILITY</string>
    <string name="tab_amenities">AMENITIES</string>
    <string name="tab_stay">STAY</string>
    <string name="tab_others">OTHER</string>
    <string name="tab_paymnet">PAYMENTS</string>
    <string name="tab_write_a_review">WRITE A REVIEW</string>
    <string name="tab_contact_us">CONTACT US</string>
    <string name="tab_overview">OVERVIEW</string>
    <string name="title_activity_event_tab">EventTabActivity</string>
    <string name="res_itinerary">ITINERARY</string>
    <string name="title_activity_booking_info_actvity">BookingInfoActvity</string>
    <string name="res_booking_information">Booking Information</string>
    <string name="res_no_of_person">Number Of Person</string>
    <string name="res_date">Date</string>
    <string name="res_bookingdate">Booking Date</string>
    <string name="res_booking_id">Booking ID</string>
    <string name="res_payment_information">Payment Information</string>
    <string name="res_total_price">Total Price</string>
    <string name="res_payment_type">Payment Type</string>
    <string name="res_contact_person_information">Person Information</string>
    <string name="res_tour_date">Tour Date</string>
    <string name="title_activity_booking_info_tab">BookingInfoTabActivity</string>
    <string name="res_na">N/A</string>
    <string name="res_day">Day </string>
    <string name="res_change_password">Change Password</string>
    <string name="res_per_person">Per Person</string>
    <string name="res_free">Free</string>
    <string name="res_everyday">Every Day</string>
    <string name="res_day_pass">Day Pass</string>
    <string name="res_night_pass">Night Pass</string>
    <string name="res_near_by_recreation_places">Near By Recreation Places</string>
    <string name="res_suggested_tours">Suggested Tours</string>
    <string name="res_guest_reviews">Guest Reviews</string>
    <string name="res_popular_tours">Popular Tours</string>
    <string name="res_selectmonth">Select Month</string>
    <string name="alert_firstname">Please enter first name</string>
    <string name="alert_lastname">Please enter last name</string>
    <string name="alert_email">Please enter email</string>
    <string name="str_of">of</string>
    <string name="str_plsselect">Please select</string>
    <string name="str_dateofbirth">date of birth</string>
    <string name="str_gender">gender</string>
    <string name="str_mobileno">mobile no</string>
    <string name="alert_loginmsg">Please login to use this feature</string>
    <string name="res_ok">Ok</string>
    <string name="msg_payment">Please wait and don\'t close app while we are redirecting you to payment gateway.</string>
    <string name="mr">Mr.</string>
    <string name="res_mrs">Mrs.</string>
    <string name="res_miss">Miss</string>
    <string name="res_male">Male</string>
    <string name="res_female">Female</string>
    <string name="title_vacationbookingdetails">Vacation Booking Details</string>
    <string name="title_torubookingdetails">Tour Booking Details</string>
    <string name="title_eventbookingdetails">Event Booking Details</string>
    <string name="txt_location">Locations:</string>
    <string name="txt_tourdate">Tour Date :</string>
    <string name="res_to">To</string>
    <string name="txt_eventdate">Event Date :</string>
    <string name="txt_adults">Adult</string>
    <string name="res_weekenddaypass">Weekend Day Pass</string>
    <string name="res_midweekdaypass">Midweek Day Pass</string>
    <string name="res_weekendnightpass">Weekend Night Pass</string>
    <string name="res_midweeknightpass">Midweek Night Pass</string>
    <string name="txt_child">Child</string>
    <string name="res_tour_details">TOUR DETAILS</string>
    <string name="res_all_persons">ALL PERSONS</string>
    <string name="res_included_facilities">INCLUDED FACILITIES</string>
    <string name="res_event_details">EVENT DETAILS</string>
    <string name="res_vacation_details">VACATION DETAILS</string>
    <string name="tab_allperson">ALL PERSONS</string>
    <string name="res_update">Update</string>
    <string name="res_edit_profile">Edit Profile</string>
    <string name="res_time">Time</string>
    <string name="res_continue">Continue</string>
    <string name="res_schedule">Schedule</string>
    <string name="res_guest">Guest</string>
    <string name="res_popular_events">Popular Events</string>
    <string name="per_person">Per Person</string>
    <string name="res_startingfrom">Starting from</string>
    <string name="res_eventin">Events in</string>
    <string name="res_vacationin">Vakantie in</string>
    <string name="alert_selectonepass">Please select any one pass</string>
    <string name="res_month">Month</string>
    <string name="txt_depature">Departure</string>
    <string name="txt_duration">Duration</string>
    <string name="alert_selectmonth">Please select month first</string>
    <string name="alert_selectdate">Please select date</string>
    <string name="alert_month">Please select month</string>
    <string name="res_flight">Flight</string>
    <string name="res_sightseeing">Sightseeing</string>
    <string name="res_meals">Meals</string>
    <string name="res_trasnportations">Transportation</string>
    <string name="res_wifi">Wifi</string>
    <string name="txt_toursin">Tours in</string>
    <string name="txt_priceperperson">Per Person</string>
    <string name="data_person">Person</string>
    <string name="txt_from">From</string>
    <string name="txt_free">Free</string>
    <string name="txt_everyday">Every Day</string>
    <string name="txt_night">Nights</string>
    <string name="txt_days">Days</string>
    <string name="txt_reviews">Reviews</string>
    <string name="res_settings">Settings</string>
    <string name="res_logout">Logout</string>
    <string name="alert_logout">Are you sure you want to logout?</string>
    <string name="tab_upcoming">UPCOMING</string>
    <string name="tab_past">PAST</string>
    <string name="res_tour_name">Tour Name:</string>
    <string name="res_location">Location:</string>
    <string name="res_duration">Duration:</string>
    <string name="res_departure_from">Departure From:</string>
</resources>