<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password">

    <EditText
        android:id="@+id/et_oldpwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/open_sans"
        android:hint="@string/res_old_password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/et_newpwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/open_sans"
        android:hint="@string/res_new_password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/et_confpwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/open_sans"
        android:hint="@string/res_confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp" />

    <Button
        android:id="@+id/btn_updatepwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_fillgreen"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/res_update"
        android:textColor="@color/white" />

</LinearLayout>