<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp">

    <TextView
        android:id="@+id/txt_listTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:background="@drawable/btn_roundfillwhite"
        android:drawableRight="@drawable/drawable_add"
        android:fontFamily="@font/open_sans_semibold"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/gray"
        android:textSize="@dimen/_13ssp"
        tools:text="Hello" />

    <LinearLayout
        android:id="@+id/lay_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/btn_roundfillwhite"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_mr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/open_sans"
                android:padding="@dimen/_10sdp"
                android:text="@string/mr" />

            <RadioButton
                android:id="@+id/rb_mrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:padding="@dimen/_10sdp"
                android:text="@string/res_mrs" />

            <RadioButton
                android:id="@+id/rb_miss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:padding="@dimen/_10sdp"
                android:text="@string/res_miss" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/open_sans"
                android:hint="@string/res_firstname"
                android:inputType="text"
                android:nextFocusRight="@+id/et_lname"
                android:nextFocusForward="@+id/et_lname"
                android:nextFocusUp="@+id/et_lname"
                android:nextFocusLeft="@+id/et_lname"
                android:nextFocusDown="@+id/et_lname"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/et_lname"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/open_sans"
                android:hint="@string/res_last_name"
                android:nextFocusDown="@+id/et_email"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp" >



            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/open_sans"
                android:hint="@string/res_date_of_birth"
                android:inputType="none"
                android:focusable="false"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_40sdp">

            <EditText
                android:id="@+id/et_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/open_sans"
                android:hint="@string/res_gender"
                android:inputType="none"
                android:focusable="false"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/_10sdp"
                android:visibility="gone"
                android:background="@android:color/transparent"
                android:gravity="center" />
            </FrameLayout>


        </LinearLayout>


        <EditText
            android:id="@+id/et_bookinemail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/open_sans"
            android:hint="@string/res_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/et_bookingnumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/open_sans"
            android:hint="@string/res_contact_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
</LinearLayout>