<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_dialogsearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIdolDetailDialogBackground"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_30sdp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/txt_sorttitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/res_search"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colortenopcity" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_fillwhitegreenborder"
                android:fontFamily="@font/open_sans"
                android:hint="@string/res_search_title"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_scanel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="3"
                    android:background="@drawable/btn_fillgreen"
                    android:textAllCaps="true"
                    android:fontFamily="@font/open_sans_semibold"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/res_clear"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_btnapply"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="3"
                    android:background="@drawable/btn_fillgreen"
                    android:fontFamily="@font/open_sans_semibold"
                    android:padding="@dimen/_10sdp"
                    android:textAllCaps="true"
                    android:text="@string/res_apply"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>